tests/should-not-compile/assign-null-to-int-variable.talc
i:int = 0;
// EXPECTED ERROR: type null-type cannot be assigned to variable "i" of type int
i = null;
